--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </style>
 </head>
 
-<body ng-app="myTest" ng-controller="MainCtrl">
+<body ng-app="myTest">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <ui-view></ui-view>
-
     </div>
   </div>
+
   <script type="text/ng-template" id="/home.html">
     <div class="page-header">
       <h1>Flapper News</h1>
@@ -48,7 +48,7 @@
       <button type="submit" class="btn btn-primary">Post</button>
     </form>
   </script>
-  <script type="text/ng-template" id="/posts/html">
+  <script type="text/ng-template" id="/posts.html">
     <div class="page-header">
       <h3>
         <a href="{{post.link}}" ng-show="post.link">
@@ -61,11 +61,20 @@
     </div>
 
     <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-      <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span> {{comment.upvotes}} - by {{comment.author}}
       <span style="font-size:20px; margin-left:10px;">
         {{comment.body}}
       </span>
+      <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span> {{comment.upvotes}} - by {{comment.author}}
     </div>
+
+    <form ng-submit="addComment()" style="margin-top:30px;">
+      <h3>Add a new comment</h3>
+      <div class="form-group">
+        <input type="text" ng-model="body" placeholder="Comment" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-primary">Comment</button>
+
+    </form>
   </script>
 </body>
 
